# hq-desktop-app

./: .gitattributes  .gitignore  Cargo.toml  MIGRATION.md  PHASE3.md  README.md  WAVE5-DESKTOP-UPDATE-SHIP.md  WAVE6-TUNGSTENITE-SHIP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  versions.toml
.claude/policies/: hq-desktop-app-nonactivating-window-toggle-focusable-for-input.md  hq-desktop-app-source-contract-specs-retarget-with-edits.md
.github/workflows/: ci.yml  onboarding-release-monitor.yml  release.yml  windows-check.yml
apps/installer/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/installer/.cargo/: config.toml
apps/installer/docs/: architecture.md  code-signing-windows.md  dev-setup-windows.md  (+1 more)
apps/installer/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
apps/installer/src-tauri/capabilities/: default.json
apps/installer/src-tauri/icons/: icon.icns
apps/installer/src-tauri/src/: lib.rs  single_instance.rs
apps/installer/src-tauri/src/commands/: ai_tools.rs  deps.rs  device.rs  directory.rs  fs.rs  install_menubar.rs  keychain.rs  launch.rs  mod.rs  oauth.rs  process.rs  staging.rs
apps/installer/src-tauri/tests/: deps_test.rs  git_test.rs  process_test.rs
apps/sync/: .gitignore  DESIGN.md  PRODUCT.md  README.md  desktop-alt.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vite.preview.config.ts
apps/sync/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.ci.conf.json  tauri.windows.conf.json  tauri.windows.release.conf.json
apps/sync/src-tauri/binaries/: recall-desktop-sdk-aarch64-apple-darwin  recall-desktop-sdk-x86_64-apple-darwin
apps/sync/src-tauri/capabilities/: activity-log.json  default.json  desktop-alt.json  dm-banner.json  dm-detail.json  meeting-permissions.json  meetings-window.json  messages.json  new-files-detail.json  notification-history.json  packages.json  share-detail.json  widget.json
apps/sync/src-tauri/helper/: hq-tray-helper.swift
apps/sync/src-tauri/icons/: icon.icns
apps/sync/src-tauri/src/: events.rs  glass.rs  main.rs  tray.rs  tray_helper.rs  updater.rs
apps/sync/src-tauri/src/commands/: activity.rs  agency.rs  ai_tools.rs  app.rs  auth.rs  autostart.rs  banner.rs  checksums.rs  cognito.rs  compat.rs  config.rs  conflicts.rs  content.rs  daemon.rs  desktop_alt.rs  dm_mqtt.rs  dm_notify.rs  drift_detail.rs  feedback.rs  first_push.rs  first_run.rs  folder_picker.rs  git_mirror.rs  hq_cli_update.rs  hq_core_attempt.rs  hq_core_drift.rs  hq_core_staging.rs  hq_core_state.rs  hq_core_update.rs  install_deps.rs  install_directory.rs  install_manifest.rs  install_stages.rs  launch.rs  library_local.rs  lifecycle.rs  long_paths.rs  marketplace.rs  meetings.rs  messages.rs  (+28 more)
apps/sync/src-tauri/src/commands/sessions/: claude.rs  codex.rs  history.rs  liveness.rs  outpost.rs
apps/sync/src-tauri/src/util/: client_info.rs  feature_gate.rs  hq_resolver.rs  ignore.rs  journal.rs  meeting_ledger.rs  mod.rs  mqtt_tls.rs  paths.rs  recordings_ledger.rs  recordings_ledger_test.rs  release_channel.rs  test_support.rs
crates/: .gitkeep
crates/hq-desktop-core/: Cargo.toml
crates/hq-desktop-core/src/: activity.rs  agency.rs  banner.rs  client_info.rs  cognito.rs  config.rs  conflicts.rs  daemon.rs  desktop_alt.rs  dm_notify.rs  drift_scope.rs  events.rs  feature_gate.rs  first_push.rs  first_run.rs  git_mirror.rs  hq_cli_update.rs  hq_cloud.rs  hq_resolver.rs  hq_version.rs  journal.rs  lib.rs  library_local.rs  lifecycle.rs  marketplace.rs  meeting_ledger.rs  meetings.rs  messages.rs  oauth.rs  paths.rs  prewarm.rs  process_types.rs  projects_local.rs  recall_sdk.rs  recordings_ledger.rs  recordings_ledger_test.rs  release_channel.rs  run_cli_provision.rs  sessions.rs  settings.rs  (+7 more)
crates/hq-desktop-core/src/sessions/: claude.rs  codex.rs  history.rs  mod.rs  outpost.rs
crates/hq-platform/: Cargo.toml
crates/hq-platform/src/: autostart.rs  lib.rs  notifications.rs  permissions.rs  tray_geometry.rs  window_effects.rs
crates/hq-telemetry/: Cargo.toml
crates/hq-telemetry/src/: lib.rs
docs/: README.md  RELEASE.md  phase2-status.md
imports/hq-installer-react/: RELEASING.md  pnpm-lock.yaml
imports/hq-sync-win/: .gitignore  DESIGN.md  README.md  SECURITY.md  desktop-alt.html  package-lock.json  package.json  packages.html  vite.config.ts
imports/hq-sync-win/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
imports/hq-sync-win/src-tauri/binaries/: .gitkeep
imports/hq-sync-win/src-tauri/capabilities/: default.json  desktop-alt.json  dm-detail.json  drift-detail.json  meeting-permissions.json  new-files-detail.json  notification-history.json  packages.json
imports/hq-sync-win/src-tauri/examples/: emit-sample-journal.rs
imports/hq-sync-win/src-tauri/src/: events.rs  main.rs  tray.rs  updater.rs
imports/hq-sync-win/src-tauri/src/commands/: activity.rs  auth.rs  autostart.rs  banner.rs  cognito.rs  config.rs  conflicts.rs  daemon.rs  desktop_alt.rs  dm_mqtt.rs  dm_notify.rs  drift_detail.rs  first_push.rs  first_run.rs  folder_picker.rs  git_mirror.rs  hq_cli_update.rs  hq_core_drift.rs  hq_core_staging.rs  hq_core_state.rs  hq_core_update.rs  meetings.rs  mod.rs  new_files.rs  notification_history.rs  notifications.rs  oauth.rs  packages.rs  permissions.rs  personal.rs  prewarm.rs  process.rs  provision.rs  recall_sdk.rs  rescue_script_cache.rs  run_cli_provision.rs  settings.rs  share_notify.rs  status.rs  sync.rs  (+4 more)
imports/hq-sync-win/src-tauri/src/util/: client_info.rs  hq_resolver.rs  ignore.rs  journal.rs  meeting_ledger.rs  mod.rs  paths.rs  release_channel.rs
reports/: WAVE9C-SYNC-409-SHIP.md
reports/sentry-audit/: WAVE5-DESKTOP-TAURI-SHIP.md
reports/sentry-audit-2026-07-22/: WAVE8-DESKTOP-CLIUPDATE-SHIP.md  WAVE8-DESKTOP-SIGKILL-SHIP.md
scripts/: README.md  onboarding-release-monitor.test.ts  onboarding-release-monitor.ts  version-app.test.ts  version-app.ts
tooling/scripts/: README.md
(+654 files in other folders)
