# Root Cargo workspace for hq-desktop-app.
#
# The two Tauri app crates and the Windows import are intentionally EXCLUDED for now:
# both apps/sync and imports/hq-sync-win currently define the SAME crate name
# (`hq-sync-menubar`), so they cannot share one workspace until the sync fork is
# reconciled. Establishing the unified workspace (adding the app crates as members,
# hoisting shared dependency versions into [workspace.dependencies]) is Phase 4–5 of
# MIGRATION.md. Until then, each app builds standalone from its own src-tauri directory
# exactly as it did before the import.
[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
  "apps/installer/src-tauri",
  "apps/sync/src-tauri",
  "imports/hq-sync-win/src-tauri",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
