# Root Cargo workspace for hq-desktop-app (single app: install-then-sync).
#
# `apps/sync` is the base of the one shipped app. Its crate and the two port-source
# imports are intentionally EXCLUDED for now — `apps/sync` and `imports/hq-sync-win`
# both still define the crate name `hq-sync-menubar`, so they cannot co-exist in one
# workspace until the Windows fork is folded in. The app builds standalone from its own
# src-tauri directory exactly as imported. Adding `apps/sync/src-tauri` as a member and
# hoisting shared dependencies into [workspace.dependencies] happens as the shared
# crates are extracted (see MIGRATION.md, Phase 4).
[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
  "apps/sync/src-tauri",
  "imports/hq-installer-react/src-tauri",
  "imports/hq-sync-win/src-tauri",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
