# Foundation crate (Phase 4): product-neutral primitives shared by the HQ desktop
# app(s) — paths/config dirs, the diagnostic logfile, ignore rules, the HQ CLI
# resolver, and the meeting/recordings ledgers. No Tauri, no app couplings.
[package]
name = "hq-desktop-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
ignore = "0.4"
# hq_resolver resolves + runs the `hq` CLI (async) and drops Sentry breadcrumbs.
tokio = { version = "1", features = ["full"] }
sentry = "^0.35"

# paths.rs carries the Windows platform code (Git-Bash/toolchain resolution,
# long paths) folded in during Phase 3.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
