# Foundation crate (Phase 4): product-neutral primitives shared by the HQ desktop
# app(s) — paths/config dirs, the diagnostic logfile, ignore rules, the HQ CLI
# resolver, and the meeting/recordings ledgers. No Tauri, no app couplings.
[package]
name = "hq-desktop-core"
version = "0.1.0"
edition = "2021"

[features]
test-support = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
fs2 = "0.4"
ignore = "0.4"
aws-credential-types = "=1.2.14"
aws-smithy-runtime-api = { version = "=1.12.0", features = ["client"] }
aws-sigv4 = { version = "=1.4.3", features = ["http1"] }
# client_info builds the shared attribution reqwest::Client; release_channel needs
# strict SemVer ordering for channel resolution.
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
semver = "1"
sha1 = "0.10"
sha2 = "0.10"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
# hq_resolver resolves + runs the `hq` CLI (async) and drops Sentry breadcrumbs.
tokio = { version = "1", features = ["full"] }
sentry = "^0.35"

# paths.rs carries the Windows platform code (Git-Bash/toolchain resolution,
# long paths) folded in during Phase 3.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
# client_info's build_client timeout regression test stands up a mock server.
wiremock = "0.6"
