[package]
name = "hq-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6"
hq-desktop-core = { path = "../hq-desktop-core" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
