[package]
name = "hq-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6"
hq-desktop-core = { path = "../hq-desktop-core" }
raw-window-handle = "0.6"
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
