[package]
name = "hq-installer"
version = "0.10.0"
description = "HQ native installer"
authors = []
edition = "2021"

[lib]
name = "hq_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
which = "6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3" }
git2 = { version = "0.19", features = ["vendored-openssl"] }
tauri-plugin-agent-test = { path = "crates/tauri-plugin-agent-test", optional = true }
# `unsafe-headers` is required so the plugin honors `User-Agent` (and the
# rest of the forbidden-header set) when set from the renderer. Without it,
# `User-Agent: hq-installer/<version>` is silently dropped before the request
# leaves Tauri's Rust layer, defeating the client-attribution headers stamped
# by `src/lib/client-info.ts`.
tauri-plugin-http = { version = "2.5.8", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
sentry = "^0.35"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
# All-platform: the device_fingerprint command (hashed MAC) runs on macOS,
# Linux, and Windows. sha2 was previously windows-only (checksums); it's needed
# everywhere now, so it lives here.
sha2 = "0.10"
mac_address = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "signal"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
# Embeds the agent-browser MCP server (127.0.0.1:9876) for E2E testing.
# Enable with: `cargo tauri dev --features agent-test`
agent-test = ["dep:tauri-plugin-agent-test"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "unwind"
strip = false
split-debuginfo = "packed"
