[package]
name = "hq-sync-menubar"
version = "0.10.27"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared HQ crates (Phase 4 extraction).
hq-telemetry = { path = "../../../crates/hq-telemetry" }
hq-desktop-core = { path = "../../../crates/hq-desktop-core" }
hq-platform = { path = "../../../crates/hq-platform" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "stream"] }
dirs = "6"
rfd = "0.15"
# Onboarding content stage (commands/content.rs): decompress + parse the
# hq-core template tarball fetched from GitHub releases.
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
sha2 = "0.10"
# Git blob hashing uses SHA-1: blob_sha = sha1("blob {len}\0{content}").
# GitHub Trees API returns these per file; computing the same locally lets
# us diff without downloading file contents. (Used by hq_core_drift.rs)
sha1 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sentry = "^0.35"
glob = "0.3"
ignore = "0.4"
walkdir = "2"
# `behavior-version-latest` opts into the AWS SDK's modern defaults at compile
# time. Without it, constructing an S3 client panics with
#   "A behavior major version must be set when sending a request or
#    constructing a client"
# because aws-sdk-s3 1.x requires you to pin a BehaviorVersion either in code
# (per call site) or at the dep level via this feature. We pin at the dep
# level so first_push.rs / personal.rs don't each need to remember it.
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", features = ["behavior-version-latest"] }
aws-config = "1"
aws-smithy-types = "1"
aws-credential-types = "1"
# Provides `Identity` (the `aws-sigv4` SigningParams builder takes `&Identity`,
# constructed from `aws_credential_types::Credentials` via `Into`). Already in
# the graph transitively via the aws-sdk crates; pinned direct so dm_mqtt.rs can
# name the type without leaning on a transitive re-export.
aws-smithy-runtime-api = { version = "1", features = ["client"] }
# SigV4 query-presigning for the AWS IoT MQTT-over-WSS connection
# (commands/dm_mqtt.rs). The `http1` feature pulls the `http_request`
# presigning surface (SignableRequest / SigningSettings / SignatureLocation)
# which signs a GET and emits the X-Amz-* query string we hand to rumqttc.
# Already in the dep graph transitively via the aws-sdk crates; pinned direct
# so dm_mqtt.rs can use it without a transitive re-export moving.
aws-sigv4 = { version = "1", features = ["http1"] }
# MQTT-over-WebSockets client for AWS IoT Core push delivery. `websocket`
# enables the wss transport, but the `Transport::Wss` connect path in rumqttc
# is gated on `use-rustls` too (it builds a tokio-rustls TLS layer), so both
# are required. We set the full presigned `wss://{host}/mqtt?X-Amz-...` string
# as the broker address (path + SigV4 query preserved) rather than via
# `parse_url`, because rumqttc's url parser treats unknown query keys as errors
# and would reject the X-Amz-* params.
# 0.25.1 brings ws_stream_tungstenite 0.15, whose send path treats a peer
# close / tungstenite protocol error as a recoverable I/O error instead of
# `unreachable!()`-panicking. The MQTT event loop can then reconnect normally.
rumqttc = { version = "0.25.1", default-features = false, features = ["websocket", "use-rustls"] }
# Bundled Mozilla/webpki root certificates for the AWS IoT Core MQTT-over-WSS
# connections. Building the rustls trust store from these (see
# `util/mqtt_tls.rs`) avoids `TlsConfiguration::default()`'s
# `rustls_native_certs::load_native_certs().expect(...)`, which panics on a
# transient macOS keychain I/O error (Sentry HQ-SYNC-D). Already in the graph
# transitively; pinned direct so `util/mqtt_tls.rs` can name
# `webpki_roots::TLS_SERVER_ROOTS`.
webpki-roots = "1"
ulid = "1"
bytes = "1"
# Strict SemVer comparison for the release-channel resolver in
# `util/release_channel.rs`. We need correct pre-release ordering
# (`1.0.0-alpha.1 < 1.0.0-beta.1 < 1.0.0`) when picking the newest
# applicable release per channel — the loose `cmp_semver` in
# `commands/hq_cli_update.rs` drops pre-release suffixes and would
# rank `v0.1.109-beta.1` as equal to `v0.1.109`, which would let a
# stable-channel user pick up a beta. Tiny dep, well-maintained.
semver = "1"
# `url::Url` is required by `tauri_plugin_updater::UpdaterBuilder::endpoints`
# (the plugin re-exports `url::Url` but builds against this exact crate).
# Already in the dep graph via reqwest + tauri-plugin-updater; declaring it
# directly so updater.rs can `use url::Url;` without leaning on a
# transitive re-export that could move.
url = "2"

[profile.release]
# macOS/dSYM-specific. On Windows MSVC the pdb is already a separate sidecar.
split-debuginfo = "packed"

# Unix signal handling for the process-group tree-kill in commands/process.rs.
# Windows uses Win32 Job Objects instead — see the cfg(windows) block below.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Windows platform deps, folded in from hq-sync-win (Phase 3):
#   - Win32 Job Objects + ToolHelp: process spawn/cancel tree-kill (process.rs)
#   - winreg: HKCU Run key for autostart (autostart.rs)
#   - GetMonitorInfoW/MonitorFromWindow: tray popover work-area fallback (tray.rs)
#   - DwmSetWindowAttribute (corner preference): disable Win11 frame rounding (tray.rs)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Used by commands::folder_picker to enumerate NSApp.windows and close
# any stale NSOpenPanel/NSSavePanel before opening a new picker. rfd
# doesn't expose the panel handle, so we reach into AppKit directly.
objc2 = "0.6"
# block2 callers in the menubar app — ObjC blocks for Apple APIs:
#
# 1. commands/notifications.rs — UNUserNotificationCenter
#    getNotificationSettings / requestAuthorization, so we can read the
#    *real* OS authorization state instead of the hardcoded
#    PermissionState::Granted that tauri-plugin-notification's desktop
#    impl returns. RcBlock (heap, refcounted) outlives our stack frame so
#    a late completion callback after a recv timeout can't use-after-free.
#
# 2. commands/permissions.rs — AVCaptureDevice
#    requestAccessForMediaType: for TCC microphone registration from HQ
#    Sync's main process. Passing nil for the completion handler crashes
#    per Apple's contract, so block2 constructs a valid one.
#
# 3. commands/widget.rs — NSNotificationCenter
#    addObserverForName:object:queue:usingBlock: for
#    NSApplicationDidChangeScreenParametersNotification so the floating
#    wordmark re-anchors on display arrangement/resolution change.
block2 = "0.6"
# Direct dep on mac-notification-sys for action-button notifications.
# tauri-plugin-notification (2.3.3) on macOS uses notify-rust which wraps
# NSUserNotification but DOES NOT expose action buttons —
# `register_action_types` is mobile-only and there's no on_action callback
# for desktop. Going one layer down to mac-notification-sys (already a
# transitive dep via notify-rust) gives us MainButton::SingleAction for a
# "Record" button on the meeting-detect notification, MainButton::DropdownActions
# for the share-notify dropdown UX, AND a blocking wait_for_click that
# returns the response (Click / ActionButton(name) / Reply / Dismiss). We
# spawn one thread per notification to await the response so the async
# Tauri command itself never blocks. Pattern shared between
# commands/meetings.rs and commands/share_notify.rs.
mac-notification-sys = "0.6"
# CGRect/CGPoint/CGSize for the Liquid Glass window backing (src/glass.rs):
# `[contentView bounds]` returns an NSRect by value, which msg_send! needs an
# Encode-able type for. Already in the lock tree (transitive via objc2-app-kit);
# pinned as a direct dep so the glass bridge can name the geometry type.
objc2-core-foundation = "0.3"

[features]
journal-cli = []

# Lives in examples/ (auto-discovered) rather than src/bin/. Cargo's auto-bin
# detection registers any src/bin/*.rs as kind= ["bin"] regardless of
# required-features; Tauri's bundler then walks all bins and tries to copy
# each, which broke v0.1.16 (file never built because of the feature gate, but
# bundler still tried). Examples are auto-discovered from examples/, never
# walked by Tauri's bundler. Run with:
#   cargo run --example emit-sample-journal --features journal-cli
[[example]]
name = "emit-sample-journal"
path = "examples/emit-sample-journal.rs"
required-features = ["journal-cli"]

[dev-dependencies]
hq-desktop-core = { path = "../../../crates/hq-desktop-core", features = ["test-support"] }
tempfile = "3"
wiremock = "0.6"
tauri = { version = "2", features = ["test"] }
